# staging

./: .gitignore  .gitmodules  README_ZN.md
Smart wear/: readme.md  更新计划.md
github_good_project/: readme.md
github_good_project/OpenCV/opencv_lenaer/: opencv_lenaer.cpp  opencv_lenaer.sln  opencv_lenaer.vcxproj  opencv_lenaer.vcxproj.filters
github_good_project/OpenCV/opencv_lenaer/Debug/: vc142.idb
github_good_project/OpenCV/opencv_lenaer/Debug/opencv_lenaer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  opencv_lenaer.lastbuildstate
github_good_project/OpenCV/opencv_lenaer/x64/Debug/: opencv_lenaer.exe.recipe  opencv_lenaer.ilk  vc142.idb  (+1 more)
github_good_project/TinyXml2/: readme.md
github_good_project/TinyXml2/cpp_xml/: cpp_xml.cpp  cpp_xml.sln  cpp_xml.vcxproj  cpp_xml.vcxproj.filters  readme.md  tinyxml2_read.h
github_good_project/TinyXml2/cpp_xml/Debug/: cpp_xml.exe.recipe  cpp_xml.ilk  cpp_xml.vcxproj.FileListAbsolute.txt  vc142.idb
github_good_project/cJSonProjects/code_for_cds/: CMakeLists.txt  main.c
ide/: vscode.md
language_laner/cpp/: 函数-对象-继承.md  函数模板与STL.md
language_laner/cpp/cpp/: cpp.cpp  cpp.sln  cpp.vcxproj
language_laner/cpp/cpp/Debug/: cpp.exe.recipe  cpp.ilk  cpp.vcxproj.FileListAbsolute.txt  vc142.idb
python_script/: readme.md  美女文本.md
python_script/File_Oprator/: File_Handle.py  File_add.py  ddddd.py
python_script/cds_opencv/: cds_opencv.py
python_script/csv/: a.xlsx  readme.md  save_obj_to_excel.py  test.csv  test.json  test2.csv
python_script/json/: json_load.py  test_data.json  test_save,json
(+26 files in other folders)
